--- a/resources/style.css
+++ b/resources/style.css
@@ -9,10 +9,16 @@ body {
   margin-right: auto;
 }
 h1, h2, h3 {
+  padding-top: 20px;
   font-weight: bold;
+  font-size: 26px;
 }
 h1.title {
   padding-top: 50px;
+  padding-bottom: 20px;
+}
+p {
+  line-height: 150%;
 }
 table {
   white-space: nowrap;
