--- a/resources/style.css
+++ b/resources/style.css
@@ -28,13 +28,13 @@ table {
   padding-bottom: 20px;
 }
 tr.even {
-  background-color: #ddd;
+  background-color: #ddd !important;
 }
 th:last-child, td:last-child {
-  background-color: #800;
-  color: white;
+  background-color: #800 !important;
+  color: white !important;
 }
 img {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
 }
